fixed scroll jumping issue

--- a/frontend/styling/default.css
+++ b/frontend/styling/default.css
@@ -11,7 +11,7 @@ body {
     background-color: rgb(65, 65, 65);
     box-shadow: rgba(0, 0, 0, 0.05) 5px 5px 10px;
     border-radius: 22px;
-    margin: 50px auto;
+    margin: 128px auto;
     padding: 24px;
     height: 100%;
     width: 80%;
